Turned unzip lib into ES6 module

--- a/Assets/WebGLTemplates/main/index.html
+++ b/Assets/WebGLTemplates/main/index.html
@@ -28,7 +28,7 @@
             display: block;
         }
     </style>
-    <script src="./StreamingAssets/unzip.js"></script>
+    <script src="./StreamingAssets/zip/index.js" type="module"></script>
 </head>
 <body>
     <div id="unityContainer"></div>
